unpackaged/main/default/objects/AS_Tile__c/AS_Tile__c.object-meta.xml
<CustomObject>
    <description>This object is to display the tiles on the Start page of lightning At Show</description>
    <label>AS Tile</label>
    <nameField>
        <label>AS Tile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AS Tiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>