unpackaged/main/default/objects/AS_Tile__c/fields/Image_Link__c.field-meta.xml
<CustomField>
    <fullName>Image_Link__c</fullName>
    <description>Upload an image as static resource and give the URL in this</description>
    <inlineHelpText>Upload an image as static resource and give the URL in this</inlineHelpText>
    <label>Image Link</label>
    <type>Url</type>
</CustomField>