unpackaged/main/default/objects/AS_Tile__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Tick the box only if you want the tile to be displayed in At Show homepage</description>
    <inlineHelpText>Tick the box only if you want the tile to be displayed in At Show homepage</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>