unpackaged/main/default/objects/AS_Tile__c/fields/Order_of_Display__c.field-meta.xml
<CustomField>
    <fullName>Order_of_Display__c</fullName>
    <description>the matrix is 3*3 
1 2 3
4 5 6
7 8 9</description>
    <inlineHelpText>the matrix is 3*3 
1 2 3
4 5 6
7 8 9</inlineHelpText>
    <label>Order of Display</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>