unpackaged/main/default/objects/AS_Tile__c/fields/UniqueId_Number__c.field-meta.xml
<CustomField>
    <fullName>UniqueId_Number__c</fullName>
    <label>UniqueId Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>